Finally fixed the layout issues

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ header {
 section {
     display: -webkit-flex;
     display: flex;
+    max-height: 400px;
 }
 
 /* Stack containers on top of each other*/
@@ -49,9 +50,10 @@ nav {
 article {
     flex: 2;
     padding: 5px;
-    overflow: scroll;
-    word-wrap: break-word;
-
+    overflow: auto;
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: column;
 }
 
 /*Style the form elements*/
